--- a/css/css1.css
+++ b/css/css1.css
@@ -1,4 +1,4 @@
-html,body{font-family:open sans,sans-serif;font-size:14px;margin:0 auto;color:#4a474c;padding:0;background-color:#fff}a:visited,a:hover,a:link{text-decoration:none!important}.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}h1,h2,h3{margin:0}.centre {
+html,body{font-family:open sans,sans-serif;font-size:14px;color:#4a474c;padding:0;background-color:#fff}a:visited,a:hover,a:link{text-decoration:none!important}.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}h1,h2,h3{margin:0}.centre {
 padding: 0px 0px 20px;
 display: block;
   margin-left: auto;
